test/loop/confidence/errors/stack_traces_1.loop
# Test that the function call stack is traced correctly

func3(num) ->
  raise('simulation')

func2 ->
  1 + func3(2)

func1 ->
  func2()


main ->
  func1()
